--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -2,4 +2,4 @@ eureka.instance.hostname=localhost
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.dashboard.path=/dashboard
+spring.application.name=discovery-server
