--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=microservices
+spring.application.name=product-service
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+server.port=0
