--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,21 +6,41 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=inf
 logging.level.org.springframework.cloud.gateway=trace
 
 ## route
-spring.cloud.gateway.mvc.routes[0].id=product-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://product-service
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/product
-
-spring.cloud.gateway.mvc.routes[1].id=order-service
-spring.cloud.gateway.mvc.routes[1].uri=lb://order-service
-spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/order
-
-spring.cloud.gateway.mvc.routes[2].id=discovery-server
-spring.cloud.gateway.mvc.routes[2].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.mvc.routes[2].filters[0]=SetPath=/
-
-spring.cloud.gateway.mvc.routes[3].id=discovery-server-static
-spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/**
+##spring.cloud.gateway.mvc.routes[0].id=product-service
+##spring.cloud.gateway.mvc.routes[0].uri=lb://product-service
+##spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/product
+##
+##spring.cloud.gateway.mvc.routes[1].id=order-service
+##spring.cloud.gateway.mvc.routes[1].uri=lb://order-service
+##spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/order
+##
+##spring.cloud.gateway.mvc.routes[2].id=discovery-server
+##spring.cloud.gateway.mvc.routes[2].uri=http://localhost:8761
+##spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/eureka/web
+##spring.cloud.gateway.mvc.routes[2].filters[0]=SetPath=/
+##
+##spring.cloud.gateway.mvc.routes[3].id=discovery-server-static
+##spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
+##spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.health.circuitbreakers.enabled=true
+
+resilience4j.circuitbreaker.configs.default.register-health-indicator=true
+resilience4j.circuitbreaker.configs.default.sliding-window-type=count_based
+resilience4j.circuitbreaker.configs.default.sliding-window-size=10
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
+
+resilience4j.timelimiter.configs.default.timeout-duration=3s
+
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=2s
+
+server.port=9000
