--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,6 +5,29 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8081
+server.port=8082
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.health.circuitbreakers.enabled=true
+
+##resilience4j.circuitbreaker.configs.instances.register-health-indicator=true
+##resilience4j.circuitbreaker.configs.instances.sliding-window-type=count_based
+##resilience4j.circuitbreaker.configs.instances.sliding-window-size=10
+##resilience4j.circuitbreaker.configs.instances.failure-rate-threshold=50
+##resilience4j.circuitbreaker.configs.instances.wait-duration-in-open-state=5s
+##resilience4j.circuitbreaker.configs.instances.permitted-number-of-calls-in-half-open-state=3
+##resilience4j.circuitbreaker.configs.instances.automatic-transition-from-open-to-half-open-enabled=true
+##resilience4j.circuitbreaker.configs.instances.minimum-number-of-calls=5
+##
+##resilience4j.timelimiter.configs.default.timeout-duration=3s
+##
+##resilience4j.retry.configs.default.max-attempts=3
+##resilience4j.retry.configs.default.wait-duration=2s
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=order-placed
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
